# continuity-gdg

./: .gitignore  README.md  package-lock.json
.github/workflows/: ci.yml
backend/: API.md  README.md  faq_routes.py  main.py  pyproject.toml  requirements.txt  test_main.py
backend/app/: config.py  dependencies.py  main.py  models.py  utils.py
backend/app/routers/: auth.py  calendar.py  chat.py
backend/chatbot/: __init__.py  routes.py  schemas.py  service.py
continuity-frontend/: package-lock.json  package.json
continuity-frontend/src/app/: globals.css  layout.tsx  page.tsx
continuity-frontend/src/app/calendar/: page.tsx
continuity-frontend/src/app/chat/: page.tsx
continuity-frontend/src/app/components/: ChatBot.tsx  chatInterface.tsx  historycards.tsx  navbar.tsx
continuity-frontend/src/app/dashboard/: page.tsx
continuity-frontend/src/app/dashboard_new/: page.tsx
continuity-frontend/src/app/documents/: page.tsx
continuity-frontend/src/app/icondrop/: UserDropdown.tsx  icon.tsx
continuity-frontend/src/app/payroll/: page.tsx
continuity-frontend/src/app/service/: chatService.ts
continuity-frontend/src/app/types/: chat.ts
